--- a/notebooks/data_exploration_dev.ipynb
+++ b/notebooks/data_exploration_dev.ipynb
@@ -2,26 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'vizard'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nik/visaland-visa-form-utility/notebooks/data_exploration_dev.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/nik/visaland-visa-form-utility/notebooks/data_exploration_dev.ipynb#ch0000000vscode-remote?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/nik/visaland-visa-form-utility/notebooks/data_exploration_dev.ipynb#ch0000000vscode-remote?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/nik/visaland-visa-form-utility/notebooks/data_exploration_dev.ipynb#ch0000000vscode-remote?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mvizard\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/nik/visaland-visa-form-utility/notebooks/data_exploration_dev.ipynb#ch0000000vscode-remote?line=6'>7</a>\u001b[0m \u001b[39m# MLOps\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/nik/visaland-visa-form-utility/notebooks/data_exploration_dev.ipynb#ch0000000vscode-remote?line=7'>8</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdvc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'vizard'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "from vizard_utils.utils import functional\n",
+    "from vizard_utils.utils import constant\n",
+    "from vizard_utils.utils import logic\n",
+    "from vizard_utils.utils import PDFIO\n",
+    "from vizard_utils.utils import preprocessor\n",
+    "\n",
     "\n",
     "# MLOps\n",
     "import dvc.api\n",
@@ -30,6 +25,13 @@
     "plt.style.use('fivethirtyeight')\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
